samples/_failures_safe/1761181077_2ed9e7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_abff7ccd.c: In function ‘dijkstra’:
./samples/SAFE/__tmp_abff7ccd.c:180:5: error: expected declaration or statement at end of input
  180 |     if (start_index == -1) {
      |     ^~
./samples/SAFE/__tmp_abff7ccd.c:180:5: error: expected declaration or statement at end of input
